chore: dependabot pr auto-merge changes